--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -4,6 +4,8 @@ $color-white: #fff;
 $color-white-light: #ececec;
 
 $color-orange: #f39c12;
+$color-orange-dark: #F27121;
 
 $color-gray: #606060;
+$color-gray-light: #828282;
 $color-gray-dark: #2c383c;
