--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -6,7 +6,9 @@
 
 @import "components/profile-picture";
 @import "components/navbar";
-@import "components/buttons";
+@import "components/footer";
 
 
 @import "homepage/homepage";
+@import "homepage/profile-page";
+@import "homepage/resume-page";
