--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -11,14 +11,13 @@ html {
 } 
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 300;
     line-height: 1.6;
     color: #333;
     box-sizing: border-box;
     text-rendering: optimizeLegibility;
     background-color: #d9dbdd;
-    position:relative;
     height: 100vh;
     width: 100vw;
 }
