--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -1,10 +1,11 @@
 h2 {
+    font-family: 'Lato';
     font-size: 32px;
-    font-weight: 'Lato';
+    font-weight: 300;
     color: $color-gray;
     margin-bottom: 20px;
 
-    span {
+    & > span {
         color: $color-primary;
         font-weight: 700;
     }
@@ -14,12 +15,13 @@ h2 {
         display: block;
         width: 70px;
         height: 3px;
-        margin-top: 20px;
+        margin-top: 15px;
         background-color: $color-orange;
     }
 }
 
 h3 {
+    font-family: 'Lato';
     font-size: 30px;
     font-weight :700;
     color: $color-gray-dark;
@@ -36,6 +38,7 @@ h3 {
 }
 
 h4 {
+    font-family: 'Lato';
     font-size: 24px;
     font-weight: 'Lato';
     color: $color-orange;
@@ -43,6 +46,7 @@ h4 {
 }
 
 h5 {
+    font-family: 'Lato';
     font-size: 20px;
     font-weight: 400;
     color: $color-gray-dark;
@@ -50,8 +54,15 @@ h5 {
 }
 
 h6 {
-    font-size: 1.12px;
+    font-family: 'Lato';
+    font-size: 12px;
     font-weight: 400;
     color: $color-gray-dark;
     margin-bottom: 10px;
+}
+
+p {
+    font-family: 'Roboto';
+    font-weight: 300;
+    margin-bottom: 0;
 }
