--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -1,17 +1,14 @@
 .nav {
-    background-image: linear-gradient(to bottom, #2c383c 0%,#2a363a 100%);
-
+    flex: 1;
+    
     & > ul {
         width: 100%;
+        height: 100%;
         list-style: none;
         margin-bottom: 0;
         background-color: transparent;
 
         & > li {
-            font-family: 'Lato';
-            font-size: 14px;
-            text-transform: uppercase;
-            font-weight: 300;
             display: inline-block;
             width: 100%;
             position: relative;
@@ -37,28 +34,34 @@
                 width: 100%;
             }
 
-            &:hover button {
+            &:hover a {
                 transform: translateX(7px);
+
+                & > i {
+                    transform: rotate(90deg);
+                }
             }
             
-            & > button {
+            & > .button--nav {
+                font-family: 'Lato';
+                font-size: 14px;
+                font-weight: 400;
+                text-transform: uppercase;
                 width: 100%;
-                padding: 15px 15px;
+                height: 100%;
+                padding: 15px 20px;
                 background-color: transparent;
                 border: none;
+                text-decoration: none;
                 color: $color-white;
                 text-align: left;
                 position: relative;
-                z-index:1;
+                z-index: 1;
                 backface-visibility: hidden;
                 transition: all .2s;
 
-                &:focus {
-                    outline: none;
-                }
-
                 & > i {
-                    margin-right: 2rem;
+                    transition: all .4s;
                 }
             }
         }
@@ -67,8 +70,14 @@
     .active {
         background-color: $color-orange;
         
-        & > button {
-            transform: translateX(7px);
-        }
+        & > a {
+            &:hover {
+                transform: translateX(0);
+            }
+
+            & > i {
+                transform: rotate(90deg);
+            }
+        } 
     }
 }
