--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -23,10 +23,7 @@
                 width: 1px;
                 visibility: hidden;
                 background-color: $color-orange;
-                transition: transform .2s,
-                            width .4s,
-                            background-color .1s,
-                            visibility .9s;
+                transition: all .4s;
             }
     
             &:hover::before {
