--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -3,6 +3,12 @@ $color-primary: #333;
 $color-white: #fff;
 $color-white-light: #ececec;
 
+$background-light: #F9F9F9;
+$background-dark: #38484e;
+$background-dark-menu: #2a363a;
+
+$border-light: #ededed;
+
 $color-orange: #f39c12;
 $color-orange-dark: #F27121;
 
