--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -18,6 +18,10 @@ h2 {
         margin-top: 15px;
         background-color: $color-orange;
     }
+
+    @include respond (phone-land) {
+        font-size: 30px;
+    }
 }
 
 h3 {
@@ -26,6 +30,7 @@ h3 {
     font-weight :700;
     color: $color-gray-dark;
     margin-bottom: 20px;
+    background-color: $background-light;
 
     &::after {
         content: "";
@@ -35,14 +40,18 @@ h3 {
         background-color: $color-white-light;
         margin-top: 20px;
     }
+
+    @include respond (phone-land) {
+        font-size: 28px;
+    }
 }
 
 h4 {
     font-family: 'Lato';
     font-size: 24px;
-    font-weight: 'Lato';
     color: $color-orange;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    background-color: inherit;
 }
 
 h5 {
@@ -51,6 +60,10 @@ h5 {
     font-weight: 400;
     color: $color-gray-dark;
     margin-bottom: 10px;
+
+    @include respond(phone-port) {
+        font-size: 18px;
+    }
 }
 
 h6 {
@@ -59,6 +72,19 @@ h6 {
     font-weight: 400;
     color: $color-gray-dark;
     margin-bottom: 10px;
+
+    @include respond(phone-port) {
+        font-size: 10px;
+    }
+
+    &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: $color-white-light;
+        margin-top: 10px;
+    }
 }
 
 p {
