--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -3,10 +3,13 @@
     
     & > ul {
         width: 100%;
-        height: 100%;
+        height: 45px;
         list-style: none;
         margin-bottom: 0;
-        background-color: transparent;
+
+        @include respond (tablets-port) {
+            display: flex;
+        }
 
         & > li {
             display: inline-block;
@@ -34,20 +37,24 @@
             &:hover a {
                 transform: translateX(7px);
 
-                & > i {
+                @include respond (tablets-port) {
+                    transform: translate(0px, 2px)!important;
+                }
+
+                & > .arrow-icon {
                     transform: rotate(90deg);
+
+                    @include respond (tablets-port) {
+                        transform: rotate(-90deg);
+                    }
                 }
             }
             
             & > .button--nav {
-                font-family: 'Lato';
-                font-size: 14px;
-                font-weight: 400;
-                text-transform: uppercase;
                 width: 100%;
                 height: 100%;
+                justify-content: space-between;
                 padding: 15px 20px;
-                background-color: transparent;
                 border: none;
                 text-decoration: none;
                 color: $color-white;
@@ -57,24 +64,67 @@
                 backface-visibility: hidden;
                 transition: all .2s;
 
-                & > i {
+                @include respond (phone-land) {
+                    justify-content: center;
+                }
+
+                & > p {
+                    font-family: 'Lato';
+                    font-size: 16px;
+                    font-weight: 400; 
+                    
+                    @include respond (phone-land) {
+                        display: none!important;
+                    }
+                }
+
+                & > .arrow-icon {
+                    font-size: 16px;
                     transition: all .4s;
+
+                    @include respond (tablets-port) {
+                        transform: rotate(90deg);
+                        transition: none;
+                    }
+
+                    @include respond (phone-land) {
+                        display: none!important;
+                    }
+                }
+
+                @include respond (tablets-port) {
+                    padding: 10px 25px;
+                }
+
+                .icon-mobile {
+                    display: none;
+
+                    @include respond (phone-land) {
+                        display: inline-block;
+                        font-size: 16px;
+                    }
                 }
             }
         }
     }
-
+    
     .active {
         background-color: $color-orange;
         
-        & > a {
-            &:hover {
-                transform: translateX(0);
-            }
+        &:hover {
+            transform: translateX(0);
 
-            & > i {
-                transform: rotate(90deg);
+            @include respond (tablets-port) {
+                transform: translate(0px, 0px)!important;
             }
-        } 
+        }
+    
+        & > .arrow-icon {
+            transform: rotate(90deg);            
+
+            @include respond (tablets-port) {
+                transform: rotate(-90deg)!important;
+            }
+        }
     }
 }
