--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,15 +1,20 @@
 @import "base/base";
+@import "base/mixins";
 @import "base/variables";
 @import "base/typography";
-@import "base/mixins";
 
 
+@import "components/buttons";
+@import "components/svg";
 @import "components/profile-picture";
 @import "components/navbar";
 @import "components/footer";
+@import "components/footer-mobile";
 
 
-@import "homepage/homepage";
-@import "homepage/profile-page";
-@import "homepage/resume-page";
-@import "homepage/contact-page";
+@import "pages/homepage";
+@import "pages/profile-page";
+@import "pages/skills-page";
+@import "pages/portfolio-page";
+@import "pages/resume-page";
+@import "pages/contact-page";
