--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -17,7 +17,9 @@ body {
     color: #333;
     box-sizing: border-box;
     text-rendering: optimizeLegibility;
-    background-color: #d9dbdd;
+    // background-color: #d9dbdd;
+    background-image: url(d.jpg);
+    background-size: cover;
     height: 100vh;
     width: 100vw;
     min-width: 400px;
