--- a/src/assets/sass/pages/_skills-page.scss
+++ b/src/assets/sass/pages/_skills-page.scss
@@ -7,6 +7,9 @@
 
     & > h3 {
         padding: 2rem 3rem 0 3rem;
+        position: sticky;
+        top: 0px;
+        z-index: 1;
     }
 
     .programming-skills {
@@ -15,22 +18,18 @@
         padding: 0 3rem 2rem 3rem;
         
         & > h4 {
-            padding-left: 30px;
+            padding-left: 35px;
         }
-            &::before {
-                position: absolute;
-                content: "";
-                left: 30px;
-                top: 22px;
-                height: 1px;
-                width: 23px;
-                background: $color-orange;
-            }
 
-            & > h4 {
-                padding-left: 35px;
-            }
-        
+        &::before {
+            position: absolute;
+            content: "";
+            left: 30px;
+            top: 22px;
+            height: 1px;
+            width: 23px;
+            background: $color-orange;
+        }        
 
         .front-end, 
         .back-end {
@@ -91,6 +90,21 @@
 
     .other-skills {
         padding: 0 3rem 2rem 3rem;
+        position: relative;
+
+        & > h4 {
+            padding-left: 35px;
+        }
+        
+        &::before {
+            position: absolute;
+            content: "";
+            left: 30px;
+            top: 22px;
+            height: 1px;
+            width: 23px;
+            background: $color-orange;
+        }     
 
         & > ul {
             list-style-type: square;
@@ -108,6 +122,21 @@
 
     .languages {
         padding: 0 3rem 2rem 3rem;
+        position: relative;
+
+        & > h4 {
+            padding-left: 35px;
+        }
+        
+        &::before {
+            position: absolute;
+            content: "";
+            left: 30px;
+            top: 22px;
+            height: 1px;
+            width: 23px;
+            background: $color-orange;
+        }  
 
         & > div > div:first-child{
             margin-right: 1rem;
