--- a/src/assets/sass/pages/_portfolio-page.scss
+++ b/src/assets/sass/pages/_portfolio-page.scss
@@ -67,8 +67,8 @@
                         background-position: center;
                         height: 100%;                    
             
-                        &-bookasleep {
-                            background-image: linear-gradient(to right bottom, $color-orange,$color-orange-dark);
+                        &-bookasleeper {
+                            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/bookasleeper.png);
                         }
         
                         &-habitects {
